Add code to play music.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -49,3 +49,7 @@ button { margin: 2em 0; padding: 1em 4em; Display:block; }
 .tokenCreated {
     padding: 10px;
 }
+
+.song {
+  text-align: center;
+}
