--- a/app/css/app.css
+++ b/app/css/app.css
@@ -14,7 +14,7 @@ label {
 
 input { Padding:10px; width: 50%; margin-bottom: 1em; }
 button { margin: 2em 0; padding: 1em 4em; Display:block; }
-#display { padding:1em; height: 1em; background-color:#fff; margin: 1em 0; text-align: center; }
+#display { padding:1em; height: 0.8em; background-color:#fff; margin: 1em 0; text-align: center; width: 150; position: relative; margin: 0em auto;}
 #loader { width: 100px; display: none; }
 
 .container { 
@@ -44,6 +44,14 @@ button { margin: 2em 0; padding: 1em 4em; Display:block; }
     width: 50%;
     position: relative;
     margin: 0em auto;
+}
+
+.checkBalanceButton {
+    position: relative;
+    margin: 1em auto;
+    width: 150;
+    height: 39px;
+    padding: 1em 2em;
 }
 
 .tokenCreated {
