Mid uploading flow

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,9 +5,8 @@
 	<title></title>
 </head>
 <body>
-	<form id="uploadForm" enctype="multipart/form-data" method="post">
-		<input type="file" name="userFile" />
-		<input type="submit" value="Upload File" name="submit">
+	<form action="/generate">
+    	<input type="submit" value="Create Tickets" />
 	</form>
 </body>
 </html>
