--- a/app/views/listen.ejs
+++ b/app/views/listen.ejs
@@ -8,17 +8,28 @@
    <body>
 
        <% include metamask.ejs %>
-       <div class="container">
+       <div class="container" id="song" style="display:none">
       
-        <h1>Listen</h1>
-        <h2> <%= song.name%> </h2>
-        <audio controls controlsList="nodownload">
-          <source src="../uploads/<%= song.filename%>" type="audio/mpeg">
-        </audio>
+          <h1>Listen</h1>
+          <h2> <%= song.name%> </h2>
+          <audio controls controlsList="nodownload">
+            <source src="../uploads/<%= song.filename%>" type="audio/mpeg">
+          </audio>
 
-        <button action="/view" method="GET">Home</button>
+          <button action="/view" method="GET">Home</button>
        </div>
+
+       <div class="container" id="purchase" style="display:none">
+      
+          <h1>Purchase a ticket?</h1>
         
-      </div>
+          <h2>Cost:</h2>
+          <h2 name="price"><%= song.price %></h2>
+          <h2 name="hostURL" style="display:none"><%= song.filename %></h2>
+
+          <button id="purchase_button">Buy Ticket</button>
+          <button action="/view" method="GET">Nevermind</button>
+       </div>
+
    </body>
 </html>
