Updated code to purchase.

--- a/app/views/listen.ejs
+++ b/app/views/listen.ejs
@@ -24,8 +24,8 @@
           <h1>Purchase a ticket?</h1>
         
           <h2>Cost:</h2>
-          <h2 name="price"><%= song.price %></h2>
-          <h2 name="hostURL" style="display:none"><%= song.filename %></h2>
+          <h2 name="price" id="test1"><%= song.price %></h2>
+          <h2 name="hostURL" style="display:none" id="test2"><%= song.filename %></h2>
 
           <button id="purchase_button">Buy Ticket</button>
           <button action="/view" method="GET">Nevermind</button>
