--- a/app/views/listen.ejs
+++ b/app/views/listen.ejs
@@ -3,7 +3,8 @@
       <title>Listen</title>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://dapps.stanford.edu/web3/web3-1.0.0-beta.34.min.js"></script>
-      <script src="js/bundle.js"></script>
+      <script src="/js/bundle.js"></script>
+      <link rel="stylesheet" href="/css/app.css">
    </head>
    <body>
 
@@ -13,7 +14,7 @@
           <h1>Listen</h1>
           <h2> <%= song.name%> </h2>
           <audio controls controlsList="nodownload">
-            <source src="../uploads/<%= song.filename%>" type="audio/mpeg">
+            <source src="/uploads/<%= song.filename%>" type="audio/mpeg">
           </audio>
 
           <button action="/view" method="GET">Home</button>
