--- a/app/views/generate.ejs
+++ b/app/views/generate.ejs
@@ -3,7 +3,8 @@
       <title>Create Token</title>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://dapps.stanford.edu/web3/web3-1.0.0-beta.34.min.js"></script>
-      <script src="js/bundle.js"></script>
+      <script src="/js/bundle.js"></script>
+      <link rel="stylesheet" href="/css/app.css">
    </head>
    <body>
 
