Uploaded audio files

--- a/app/views/generate.ejs
+++ b/app/views/generate.ejs
@@ -10,7 +10,7 @@
 
        <% include metamask.ejs %>
        <div class="container">
-        <h1>Create Personal Token</h1>
+        <h1>Create Exclusive Digital Tickets</h1>
       
         <div class="creatorInput">
           <form id="uploadForm" action='/generate' method="POST" enctype="multipart/form-data" >
