Update checkValidPermissions code.

--- a/app/views/listen.ejs
+++ b/app/views/listen.ejs
@@ -32,5 +32,9 @@
           <button action="/view" method="GET">Nevermind</button>
        </div>
 
+       <div class="tokenPurchased" id="tokenPurchased" style="display:none">
+        <h2>Tokens Purchased!</h2>
+      </div>
+
    </body>
 </html>
