Fix click issue.

--- a/app/views/listen.ejs
+++ b/app/views/listen.ejs
@@ -30,7 +30,7 @@
           <!-- <h2 name="price" id="test1"></h2> -->
           <h2 name="hostURL" style="display:none" id="test2"><%= song.filename %></h2>
 
-          <button class="purchase_button">Buy Ticket</button>
+          <button class="purchase_button" id="purchase_button">Buy Ticket</button>
           <button class="purchase_button" action="/view" method="GET">Nevermind</button>
        </div>
 
